--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@100..900&display=swap");
 :root {
   --LightSlateBlue: hsl(252, 100%, 67%);
   --LightRoyalBlue: hsl(241, 81%, 54%);
@@ -11,11 +12,144 @@
   --GreenTeal: hsl(166, 100%, 37%);
   --CobaltBlue: hsl(234, 85%, 45%);
 }
-
 * {
   box-sizing: border-box;
 }
-
-h1 {
-  background-color: yellow;
+main {
+  display: grid;
+  min-height: 60rem;
+  font-family: "Hanken Grotesk", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 500;
+  section {
+    padding: 3rem;
+    &:nth-child(1) {
+      padding: 3rem;
+      background-image: linear-gradient(
+        var(--LightSlateBlue),
+        var(--LightRoyalBlue)
+      );
+      border-radius: 0 0 3rem 3rem;
+      text-align: center;
+      color: white;
+      h1 {
+        color: var(--LightLavender);
+        font-weight: 700;
+      }
+      div {
+        display: flex;
+        margin: 3rem auto;
+        width: 45%;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        background-color: var(--VioletBlue);
+        flex-direction: column;
+        justify-content: center;
+        /* display: inline-block; */
+        h3 {
+          font-size: 6rem;
+          font-weight: 800;
+        }
+        h4 {
+          color: var(--LightLavender);
+          font-size: 3vw;
+        }
+      }
+      h2 {
+        font-size: 2.3rem;
+        font-weight: 800;
+      }
+      p {
+        color: var(--LightLavender);
+        width: 70%;
+        margin: 1rem auto;
+        line-height: 2.1rem;
+      }
+    }
+    &:nth-child(2) {
+      h1 {
+        color: black;
+        font-weight: 700;
+      }
+      ul {
+        margin: 3rem 0;
+        display: grid;
+        gap: 1.8rem;
+        li {
+          display: flex;
+          align-items: center;
+          gap: 1.5rem;
+          padding: 2rem;
+          border-radius: 1rem;
+          font-size: 1.6rem;
+          font-weight: bold;
+          img {
+          }
+          p {
+            &:nth-of-type(1) {
+              margin-right: auto;
+              font-weight: 700;
+              font-size: 1.6rem;
+            }
+            &:nth-of-type(2) {
+              font-size: 1.6rem;
+              font-weight: 700;
+              color: grey;
+              strong {
+                color: black;
+              }
+            }
+          }
+          &:nth-child(1) {
+            background-color: color-mix(
+              in hsl,
+              var(--LightRed) 20%,
+              transparent
+            );
+            color: var(--LightRed);
+          }
+          &:nth-child(2) {
+            background-color: color-mix(
+              in hsl,
+              var(--OrangeyYellow) 20%,
+              transparent
+            );
+            color: var(--OrangeyYellow);
+          }
+          &:nth-child(3) {
+            background-color: color-mix(
+              in hsl,
+              var(--GreenTeal) 20%,
+              transparent
+            );
+            color: var(--GreenTeal);
+          }
+          &:nth-child(4) {
+            background-color: color-mix(
+              in hsl,
+              var(--VioletBlue) 20%,
+              transparent
+            );
+            color: var(--VioletBlue);
+          }
+        }
+      }
+    }
+  }
+  a {
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    border-radius: 2.6rem;
+    text-decoration: none;
+    background-color: var(--DarkGrayBlue);
+    color: white;
+  }
+  a:hover {
+    background-image: linear-gradient(
+      var(--LightSlateBlue),
+      var(--LightRoyalBlue)
+    );
+  }
 }
